Bug 1168212 - Ensure popups have a minimum width of their preferred size r=Enn